# Agent_ai_hospital_recommend

./: .gitignore  README.md  app.py  pdf_server.py  pyproject.toml
adk_agent/kakao_agent/: agent_def.py  main.py  pyproject.toml
benchmark/: babitalk_qna.csv
data/hospitals/: gangnam_unni_final_aggressive.csv
prompts/: veteran_skin_consultant.txt
source/: agent_veteran_skin_consultant.py  crawling.py
source/prompt/: ai_prompt.txt  temp.txt
src/chains/: __init__.py  response_formatter.py
src/config/: settings.py
src/formatters/: __init__.py  advanced_response_formatter.py  simple_json_formatter.py
src/models/: consultation_models.py
src/services/: __init__.py  advanced_consultation_service.py  consultation_service.py
temp/: crawling.ouput
